refactor(TransferHandler): change POST /transfers endpoint to /users/accounts/transfers
